15_03_22_16_21 //added LevelListActivity.java

--- a/android/res/layout-v21/main_menu.xml
+++ b/android/res/layout-v21/main_menu.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-        android:layout_height="fill_parent"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_height="fill_parent"
         android:layout_width="fill_parent"
-        xmlns:android="http://schemas.android.com/apk/res/android" android:background="#ffb3e5fc">
+        xmlns:android="http://schemas.android.com/apk/res/android" android:background="#ffb3e5fc"
+        tools:context="ru.dk.gdxGP.android.MainMenuActivity">
 
         <Button
                 android:layout_width="wrap_content"
@@ -13,7 +14,7 @@
                 android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
                 android:textColor="#ff424242" android:alpha="255"
                 android:focusableInTouchMode="false"
-                android:onClick="menuButtonClick" android:theme="@android:style/Theme.Material.Light"/>
+                android:theme="@android:style/Theme.Material.Light"/>
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -23,7 +24,7 @@
                 android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
                 android:textColor="#ff424242" android:alpha="255"
                 android:focusableInTouchMode="false"
-                android:onClick="menuButtonClick" android:theme="@android:style/Theme.Material.Light"/>
+                android:theme="@android:style/Theme.Material.Light"/>
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -32,5 +33,5 @@
                 android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
                 android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
                 android:textColor="#ff424242" android:alpha="255" android:focusableInTouchMode="false"
-                android:onClick="menuButtonClick" android:theme="@android:style/Theme.Material.Light"/>
+                android:theme="@android:style/Theme.Material.Light"/>
 </RelativeLayout>
