--- a/android/res/layout/level_list.xml
+++ b/android/res/layout/level_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="match_parent"
-          android:layout_height="match_parent" android:id="@+id/levelList">
+          android:layout_height="match_parent" android:id="@+id/levelList" style="@android:style/Theme.Material.Light"
+          android:theme="@android:style/Theme.Material.Light" android:background="@android:color/background_light">
 
 </ListView>
