--- a/android/res/layout/level_list_item.xml
+++ b/android/res/layout/level_list_item.xml
@@ -3,4 +3,5 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@android:id/text1"
         android:layout_height="wrap_content"
-        android:layout_width="fill_parent"/>
+        android:layout_width="fill_parent"
+        android:textSize="32dp"/>
