--- a/android/res/layout-v21/main_menu.xml
+++ b/android/res/layout-v21/main_menu.xml
@@ -3,36 +3,45 @@
         xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="fill_parent"
         android:layout_width="fill_parent" android:background="#ffb3e5fc"
-        tools:context="ru.dk.gdxGP.android.MainMenuActivity" android:alpha="128">
+        tools:context="ru.dk.gdxGP.android.MainMenuActivity">
 
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/helpButton"
-            android:id="@+id/helpButton" android:layout_centerVertical="true" android:layout_centerHorizontal="true"
-            android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-            android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
-            android:textColor="#ff424242" android:alpha="128"
-            android:focusableInTouchMode="false"
-            android:theme="@android:style/Theme.Material.Light"/>
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/startButton"
-            android:id="@+id/newGameButton" android:layout_above="@+id/helpButton"
-            android:layout_centerHorizontal="true"
-            android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-            android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
-            android:textColor="#ff424242" android:alpha="128"
-            android:focusableInTouchMode="false"
-            android:theme="@android:style/Theme.Material.Light"/>
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/exitButton"
-            android:id="@+id/exitButton" android:layout_below="@+id/helpButton" android:layout_centerHorizontal="true"
-            android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-            android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
-            android:textColor="#ff424242" android:alpha="128" android:focusableInTouchMode="false"
-            android:theme="@android:style/Theme.Material.Light"/>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/helpButton"
+                android:id="@+id/helpButton" android:layout_centerVertical="true" android:layout_centerHorizontal="true"
+                android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
+                android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
+                android:textColor="#ff424242" android:alpha="255"
+                android:focusableInTouchMode="false"
+                android:theme="@android:style/Theme.Material.Light"/>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/startButton"
+                android:id="@+id/newGameButton" android:layout_above="@+id/helpButton"
+                android:layout_centerHorizontal="true"
+                android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
+                android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
+                android:textColor="#ff424242" android:alpha="255"
+                android:focusableInTouchMode="false"
+                android:theme="@android:style/Theme.Material.Light"/>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settingsButton"
+                android:id="@+id/settingsButton" android:layout_below="@+id/helpButton" android:layout_centerHorizontal="true"
+                android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
+                android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
+                android:textColor="#ff424242" android:alpha="255" android:focusableInTouchMode="false"
+                android:theme="@android:style/Theme.Material.Light"/>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/exitButton"
+                android:id="@+id/exitButton" android:layout_below="@+id/settingsButton" android:layout_centerHorizontal="true"
+                android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
+                android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
+                android:textColor="#ff424242" android:alpha="255" android:focusableInTouchMode="false"
+                android:theme="@android:style/Theme.Material.Light"/>
 </RelativeLayout>
