--- a/android/res/layout/main_menu.xml
+++ b/android/res/layout/main_menu.xml
@@ -26,13 +26,22 @@
             android:textColor="#ff424242" android:alpha="255"
             android:focusableInTouchMode="false"
             android:theme="@android:style/Theme.Material.Light"/>
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/exitButton"
-            android:id="@+id/exitButton" android:layout_below="@+id/helpButton" android:layout_centerHorizontal="true"
-            android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-            android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
-            android:textColor="#ff424242" android:alpha="255" android:focusableInTouchMode="false"
-            android:theme="@android:style/Theme.Material.Light"/>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settingsButton"
+                android:id="@+id/settingsButton" android:layout_below="@+id/helpButton" android:layout_centerHorizontal="true"
+                android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
+                android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
+                android:textColor="#ff424242" android:alpha="255" android:focusableInTouchMode="false"
+                android:theme="@android:style/Theme.Material.Light"/>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/exitButton"
+                android:id="@+id/exitButton" android:layout_below="@+id/settingsButton" android:layout_centerHorizontal="true"
+                android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
+                android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
+                android:textColor="#ff424242" android:alpha="255" android:focusableInTouchMode="false"
+                android:theme="@android:style/Theme.Material.Light"/>
 </RelativeLayout>
