15_06_19_17_39 //added logo to main menu //fixed design for different versions of Android //minAPI set to 10 //some fixes

--- a/android/res/layout-v21/main_menu.xml
+++ b/android/res/layout-v21/main_menu.xml
@@ -9,12 +9,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/helpButton"
-                android:id="@+id/helpButton" android:layout_centerVertical="true" android:layout_centerHorizontal="true"
+                android:id="@+id/helpButton"
                 android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-                android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
+                android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
                 android:textColor="#ff424242" android:alpha="255"
                 android:focusableInTouchMode="false"
-                android:theme="@android:style/Theme.Material.Light"/>
+                android:theme="@android:style/Theme.Material.Light" android:layout_above="@+id/settingsButton"
+                android:layout_centerHorizontal="true"/>
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -22,7 +23,7 @@
                 android:id="@+id/newGameButton" android:layout_above="@+id/helpButton"
                 android:layout_centerHorizontal="true"
                 android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-                android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
+                android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
                 android:textColor="#ff424242" android:alpha="255"
                 android:focusableInTouchMode="false"
                 android:theme="@android:style/Theme.Material.Light"/>
@@ -30,18 +31,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/settingsButton"
-                android:id="@+id/settingsButton" android:layout_below="@+id/helpButton" android:layout_centerHorizontal="true"
+                android:id="@+id/settingsButton"
                 android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-                android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
+                android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
                 android:textColor="#ff424242" android:alpha="255" android:focusableInTouchMode="false"
-                android:theme="@android:style/Theme.Material.Light"/>
+                android:theme="@android:style/Theme.Material.Light"
+                android:layout_centerHorizontal="true" android:layout_above="@+id/exitButton"/>
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/exitButton"
-                android:id="@+id/exitButton" android:layout_below="@+id/settingsButton" android:layout_centerHorizontal="true"
+                android:id="@+id/exitButton"
                 android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-                android:enabled="true" android:elegantTextHeight="true" android:textSize="64sp"
+                android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
                 android:textColor="#ff424242" android:alpha="255" android:focusableInTouchMode="false"
-                android:theme="@android:style/Theme.Material.Light"/>
+                android:theme="@android:style/Theme.Material.Light" android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"/>
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" android:src="@drawable/logo_main"
+                android:layout_above="@+id/newGameButton" android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" android:visibility="visible"/>
 </RelativeLayout>
