--- a/android/res/layout/level_list_item.xml
+++ b/android/res/layout/level_list_item.xml
@@ -4,4 +4,6 @@
         android:id="@android:id/text1"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent" style="@android:style/TextAppearance.Material"
-        android:theme="@android:style/Theme.Material.Light" android:textSize="32dp"/>
+        android:theme="@android:style/Theme.Material.Light" android:textSize="32sp"
+        android:textColor="#FF000000"
+        android:textAlignment="center"/>
