--- a/android/res/layout-v21/activity_settings.xml
+++ b/android/res/layout-v21/activity_settings.xml
@@ -2,7 +2,8 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context="ru.dk.gdxGP.android.SettingsActivity">
+                tools:context="ru.dk.gdxGP.android.SettingsActivity" style="@android:style/Theme.Material.Light"
+                android:theme="@android:style/Theme.Material.Light">
 
 
     <SeekBar
