--- a/android/res/layout/activity_settings.xml
+++ b/android/res/layout/activity_settings.xml
@@ -3,13 +3,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context="ru.dk.gdxGP.android.SettingsActivity" style="@android:style/Theme.Material.Light"
-                android:theme="@android:style/Theme.Material.Light">
+                android:theme="@android:style/Theme.Material.Light" android:background="#ffffffff">
 
 
     <SeekBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/MusicVolSeekBar" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" android:layout_alignParentEnd="true" android:progress="100"
-            android:indeterminate="false" android:max="100" style="@android:style/Theme.Material.Light"/>
+            android:id="@+id/MusicVolSeekBar" android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" android:progress="100"
+            android:indeterminate="false" android:max="100" style="@android:style/Theme.Material.Light"
+            android:layout_toRightOf="@+id/musicVolumeText" android:layout_toEndOf="@+id/musicVolumeText"
+            android:theme="@android:style/Theme.Material.Light"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/musicVolumeText" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" android:text="@string/musicVolume" android:enabled="true"
+            android:visibility="visible" android:typeface="normal" android:textColor="#ff000000"
+            style="@android:style/Theme.Material.Light" android:theme="@android:style/Theme.Material.Light"/>
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/soundVolumeText"
+              android:text="@string/soundVolume" android:layout_below="@+id/MusicVolSeekBar"
+              android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:enabled="true"
+              android:visibility="visible" android:typeface="normal" android:textColor="#ff000000"
+              style="@android:style/Theme.Material.Light" android:theme="@android:style/Theme.Material.Light"/>
+    <SeekBar style="@android:style/Theme.Material.Light" android:layout_width="wrap_content"
+             android:layout_height="wrap_content" android:id="@+id/AudioVolSeekBar"
+             android:progress="100" android:indeterminate="false" android:max="100"
+             android:layout_below="@+id/MusicVolSeekBar" android:layout_toRightOf="@+id/soundVolumeText"
+             android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
+             android:theme="@android:style/Theme.Material.Light"/>
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/debugSwitchText"
+              android:layout_below="@+id/AudioVolSeekBar" android:layout_alignParentLeft="true"
+              android:layout_alignParentStart="true" android:editable="false" android:enabled="true"
+              style="@android:style/Theme.Material.Light" android:theme="@android:style/Theme.Material.Light"/>
+    <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Debug Switch"
+            android:id="@+id/debugSwitch"
+            android:theme="@android:style/Theme.Material.Light" style="@android:style/Theme.Material.Light"
+            android:layout_below="@+id/AudioVolSeekBar" android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" android:checked="false"
+            android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:visibility="visible"
+            android:enabled="true" android:typeface="normal" android:textColor="#ff000000"/>
 </RelativeLayout>
