--- a/android/res/layout/main_menu.xml
+++ b/android/res/layout/main_menu.xml
@@ -2,56 +2,56 @@
 <RelativeLayout
         xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="fill_parent"
-        android:layout_width="fill_parent" android:background="#ffb3e5fc"
-        tools:context="ru.dk.gdxGP.android.MainMenuActivity">
+        android:layout_width="fill_parent"
+        tools:context="ru.dk.gdxGP.android.MainMenuActivity" android:background="#FFFFFFFF">
 
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/helpButton"
-            android:id="@+id/helpButton"
-            android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-            android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
-            android:textColor="#ff424242" android:alpha="255"
-            android:focusableInTouchMode="false"
-            android:theme="@android:style/Theme.Material.Light" android:layout_above="@+id/settingsButton"
-            android:layout_centerHorizontal="true"/>
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/startButton"
-            android:id="@+id/newGameButton" android:layout_above="@+id/helpButton"
-            android:layout_centerHorizontal="true"
-            android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-            android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
-            android:textColor="#ff424242" android:alpha="255"
-            android:focusableInTouchMode="false"
-            android:theme="@android:style/Theme.Material.Light"/>
-        <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/settingsButton"
-                android:id="@+id/settingsButton"
-                android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-                android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
-                android:textColor="#ff424242" android:alpha="255" android:focusableInTouchMode="false"
-                android:theme="@android:style/Theme.Material.Light"
-                android:layout_centerHorizontal="true" android:layout_above="@+id/exitButton"/>
-        <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/exitButton"
-                android:id="@+id/exitButton"
-                android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-                android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
-                android:textColor="#ff424242" android:alpha="255" android:focusableInTouchMode="false"
-                android:theme="@android:style/Theme.Material.Light" android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"/>
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageView" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" android:src="@drawable/logo_main"
-                android:layout_above="@+id/newGameButton" android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" android:visibility="visible"/>
+                <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/helpButton"
+                        android:id="@+id/helpButton"
+                        android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
+                        android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
+                        android:textColor="#ff424242" android:alpha="255"
+                        android:focusableInTouchMode="false"
+                        android:theme="@android:style/Theme.Material.Light"
+                        android:ellipsize="middle"
+                        style="@android:style/Theme.Material.Light" android:src="@drawable/info"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true"/>
+                <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/newGameButton"
+                        android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
+                        android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
+                        android:textColor="#ff424242" android:alpha="255"
+                        android:focusableInTouchMode="false"
+                        android:theme="@android:style/Theme.Material.Light"
+                        style="@android:style/Theme.Material.Light"
+                        android:src="@drawable/play" android:visibility="visible"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentStart="true"/>
+                <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/settingsButton"
+                        android:id="@+id/settingsButton"
+                        android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
+                        android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
+                        android:textColor="#ff424242" android:alpha="255" android:focusableInTouchMode="false"
+                        android:theme="@android:style/Theme.Material.Light"
+                        android:ellipsize="middle" style="@android:style/Theme.Material.Light"
+                        android:src="@drawable/settings"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentStart="true"/>
+                <ImageButton style="@android:style/Theme.Material.Light" android:layout_width="wrap_content"
+                             android:layout_height="wrap_content" android:id="@+id/tutorialButton" android:clickable="true"
+                             android:textStyle="normal|bold|italic" android:singleLine="false" android:enabled="true"
+                             android:elegantTextHeight="true" android:textSize="48sp" android:textColor="#ff424242"
+                             android:alpha="255" android:focusableInTouchMode="false"
+                             android:theme="@android:style/Theme.Material.Light" android:src="@drawable/learn"
+                             android:visibility="visible"
+                             android:layout_alignParentTop="true"
+                             android:layout_alignParentEnd="true"/>
 </RelativeLayout>
