--- a/android/res/layout-v21/main_menu.xml
+++ b/android/res/layout-v21/main_menu.xml
@@ -31,7 +31,8 @@
                         style="@android:style/Theme.Material.Light"
                         android:src="@drawable/play" android:visibility="visible"
                         android:layout_alignParentTop="true"
-                        android:layout_alignParentStart="true"/>
+                        android:layout_alignParentStart="true"
+                        />
                 <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -54,4 +55,21 @@
                              android:visibility="visible"
                              android:layout_alignParentTop="true"
                              android:layout_alignParentEnd="true"/>
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:src="@drawable/ic_launcher" android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" android:scaleType="center"
+            android:scaleX="3"
+            android:scaleY="3"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:id="@+id/textView"
+            android:textColor="#FF000000" android:textSize="32sp"
+            android:textStyle="normal|bold|italic"
+            android:textIsSelectable="false"
+            android:layout_above="@+id/helpButton" android:layout_centerHorizontal="true"/>
 </RelativeLayout>
