--- a/android/res/layout/main_menu.xml
+++ b/android/res/layout/main_menu.xml
@@ -11,8 +11,8 @@
                         android:text="@string/helpButton"
                         android:id="@+id/helpButton"
                         android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-                        android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
-                        android:textColor="#ff424242" android:alpha="255"
+                        android:enabled="true"  android:textSize="48sp"
+                        android:textColor="#ff424242"
                         android:focusableInTouchMode="false"
                         android:theme="@android:style/Theme.Material.Light"
                         android:ellipsize="middle"
@@ -24,8 +24,8 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/newGameButton"
                         android:clickable="true" android:textStyle="normal|bold|italic" android:singleLine="false"
-                        android:enabled="true" android:elegantTextHeight="true" android:textSize="48sp"
-                        android:textColor="#ff424242" android:alpha="255"
+                        android:enabled="true"  android:textSize="48sp"
+                        android:textColor="#ff424242"
                         android:focusableInTouchMode="false"
                         android:theme="@android:style/Theme.Material.Light"
                         style="@android:style/Theme.Material.Light"
